Fixes #1487